@@ -1,0 +1,6 @@
+Namespace 资源的隔离，名字隔离
+CGroups 资源的限制
+
+---------------------------------
+* test/linux/cgroup
+* test/bpf/bpftrace/study/cgroup
