@@ -1,0 +1,6 @@
+#include <varargs.h>
+
+int main()
+{
+
+}
