@@ -8,6 +8,7 @@ FastLog 开发日志
 
 # 编码历史
 
+* 2021年6月11日 decoder timestamp
 * 2021年6月10日 解析命令 数据结构设计
 * 2021年6月9日 添加 日志 解析 main() 程序
 * 2021年6月8日 添加 stagingBuffer 功能，移植自 NanoLog
